Fix recommended JVM options for Spring Boot 4 on Java 25 (#40)
The Memory panel's 'Recommended JVM Options' contained several flags that
were broken, redundant, or obsolete on the project's Java 25 / Spring Boot 4
target:

* -XX:+ZGenerational was removed in JDK 24 (JEP 490); generational mode is
  now the default and the flag is rejected as 'Unrecognized VM option',
  which broke every recommendation for heaps >= 4 GB.
* -XX:MaxRAMPercentage and -XX:InitialRAMPercentage are silently ignored
  when -Xms / -Xmx are set (verified with -XX:+PrintFlagsFinal), so mixing
  them with explicit heap sizes was a misleading no-op.
* -XX:+UseContainerSupport has been on by default since JDK 10.
* -Djava.security.egd=file:/dev/./urandom has been obsolete since JDK 9 --
  SecureRandom already uses NativePRNGNonBlocking on Linux.

Replaces them with Spring Boot 4 / Java 25 appropriate defaults:

* -XX:+UseStringDeduplication: Spring apps allocate many duplicate strings
  (bean names, config keys, JSON property names, log templates); works on
  G1 and ZGC (since JDK 18); typical savings 5-15% of heap.
* -XX:+UseCompactObjectHeaders: JEP 519 graduated this from experimental
  to product in JDK 25, so no -XX:+UnlockExperimentalVMOptions is needed.
  Shrinks object headers from 12 to 8 bytes under compressed oops; typical
  savings 10-20% of heap for Spring's small-object-heavy workloads.
* -XX:HeapDumpPath=/tmp: gives -XX:+HeapDumpOnOutOfMemoryError a writable
  location in containers instead of the JVM's working directory.

The Memory.vue panel description and badges were updated to match (drops
the no-longer-applicable 'Kubernetes-ready' claim since the
container-aware RAMPercentage flags are gone).

Co-authored-by: Julien Dubois <jdubois@users.noreply.github.com>
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>